# data_engineering

./: vehicle_manufacturing.ipynb
vehicle_manufacturing/: Dockerfile.producer  docker-compose-kafka.yaml  producer.py  pyproject.toml
vehicle_manufacturing/airflow/: docker-compose-airflow.yaml
vehicle_manufacturing/kafka/: consumer.py  producer.py
vehicle_manufacturing/tests/: colors.py  datasets.py  main.py  raw_data.py  tests.py
